<resources>
	<string name="app_name">物联电动车</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="prompt_email">用户名</string>
	<string name="prompt_password">密码</string>
	<string name="action_sign_in">登录</string>
	<string name="action_sign_in_short">登录</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">该用户名无效</string>
	<string name="invalid_password">密码必须大于5位字符</string>
	<string name="login_failed">"登录失败"</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="remember_password">Remember password</string>

	<string name="ip">192.168.111.125</string>
	<string name="check">信息展示</string>
	<string name="databaseShow">行车记录</string>
	<string name="setting">设置</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

</resources>